--- a/styles.css
+++ b/styles.css
@@ -197,11 +197,18 @@ footer p{
     margin:2rem  auto auto;
 }
 .photoTestimonial h1{
-font-size: 3rem;
+font-size: 2.5rem;
 color: white;
 text-decoration: overline solid greenyellow;
 margin-bottom: 2rem;
 }
+@media only screen and (max-width: 370px) {
+    .photoTestimonial h1{
+        text-decoration: none;
+        padding: 20px;
+    }  
+}
+
 .photoTestimonial p{
     max-width: 80%;
     margin: 0px auto;
@@ -249,6 +256,7 @@ margin-bottom: 2rem;
   
     width: 60vw;
     height: 4vw;
+    min-height: 30px;
 }
 .myForm button{
     margin-top: 12px;
